[gd_scene load_steps=5 format=3 uid="uid://ce51fc5pe83qy"]

[ext_resource type="Script" uid="uid://dkiuc6q7qtgx" path="res://Scripts/leaderboards.gd" id="1_4kg6k"]
[ext_resource type="Texture2D" uid="uid://ivjmu7phw2sp" path="res://Assets/Pictures/bg4.png" id="2_n6tc2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l7afy"]
texture = ExtResource("2_n6tc2")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4kg6k"]
blend_mode = 3

[node name="Leaderboards" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4kg6k")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0
theme_override_styles/panel = SubResource("StyleBoxTexture_l7afy")

[node name="Panel2" type="Panel" parent="Panel"]
modulate = Color(1, 1, 1, 0.537255)
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0

[node name="LBoards" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 27.0
offset_top = 198.0
offset_right = 693.0
offset_bottom = 1265.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/LBoards"]
layout_mode = 0
offset_left = 26.0
offset_top = 83.0
offset_right = 640.0
offset_bottom = 1048.0

[node name="LeaderboardsVBox" type="VBoxContainer" parent="Panel/LBoards/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 162.0
offset_top = 198.0
offset_right = 563.0
offset_bottom = 281.0
theme_override_font_sizes/font_size = 60
text = "Leaderboards"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 219.0
offset_top = 97.0
offset_right = 442.0
offset_bottom = 180.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Season:"
vertical_alignment = 1

[node name="Season" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 455.0
offset_top = 97.0
offset_right = 505.0
offset_bottom = 180.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "1 "
vertical_alignment = 1

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 20.0
offset_right = 149.0
offset_bottom = 97.0
theme_override_font_sizes/font_size = 50
text = "<"

[node name="AIDetailPanel" type="Panel" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_4kg6k")
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0

[node name="IgnLabel" type="Label" parent="AIDetailPanel"]
layout_mode = 0
offset_top = 128.0
offset_right = 720.0
offset_bottom = 211.0
theme_override_font_sizes/font_size = 60
text = "asdsasd"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IgnLabel2" type="Label" parent="AIDetailPanel"]
layout_mode = 0
offset_top = 20.0
offset_right = 720.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 50
text = "Viewing Player"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IgnLabel3" type="Label" parent="AIDetailPanel"]
layout_mode = 0
offset_left = 27.0
offset_top = 325.0
offset_right = 130.0
offset_bottom = 394.0
theme_override_font_sizes/font_size = 50
text = "Age:"
vertical_alignment = 1

[node name="IgnLabel4" type="Label" parent="AIDetailPanel"]
layout_mode = 0
offset_left = 23.0
offset_top = 412.0
offset_right = 202.0
offset_bottom = 481.0
theme_override_font_sizes/font_size = 50
text = "Region:"
vertical_alignment = 1

[node name="Region" type="Label" parent="AIDetailPanel"]
layout_mode = 0
offset_left = 202.0
offset_top = 412.0
offset_right = 381.0
offset_bottom = 481.0
theme_override_font_sizes/font_size = 50
text = "Region:"
vertical_alignment = 1

[node name="AgeLabel" type="Label" parent="AIDetailPanel"]
layout_mode = 0
offset_left = 149.0
offset_top = 325.0
offset_right = 252.0
offset_bottom = 394.0
theme_override_font_sizes/font_size = 50
text = "Age:"
vertical_alignment = 1

[node name="CurrentMmrLabel" type="Label" parent="AIDetailPanel"]
layout_mode = 0
offset_left = 178.0
offset_top = 502.0
offset_right = 316.0
offset_bottom = 571.0
theme_override_font_sizes/font_size = 50
text = "MMR:"
vertical_alignment = 1

[node name="MmrLabel2" type="Label" parent="AIDetailPanel"]
layout_mode = 0
offset_left = 23.0
offset_top = 504.0
offset_right = 161.0
offset_bottom = 573.0
theme_override_font_sizes/font_size = 50
text = "MMR:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MmrLabel5" type="Label" parent="AIDetailPanel"]
layout_mode = 0
offset_left = 23.0
offset_top = 594.0
offset_right = 161.0
offset_bottom = 663.0
theme_override_font_sizes/font_size = 50
text = "Rank:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RankLabel" type="Label" parent="AIDetailPanel"]
layout_mode = 0
offset_left = 177.0
offset_top = 594.0
offset_right = 315.0
offset_bottom = 663.0
theme_override_font_sizes/font_size = 50
text = "Rank:"
vertical_alignment = 1

[node name="MmrLabel4" type="Label" parent="AIDetailPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 777.0
offset_right = 253.0
offset_bottom = 846.0
theme_override_font_sizes/font_size = 50
text = "Playstyle:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TeamLabel" type="Label" parent="AIDetailPanel"]
layout_mode = 0
offset_left = 27.0
offset_top = 240.0
offset_right = 175.0
offset_bottom = 309.0
theme_override_font_sizes/font_size = 50
text = "Team:"
vertical_alignment = 1

[node name="Playstylelabel" type="Label" parent="AIDetailPanel"]
layout_mode = 0
offset_left = 266.0
offset_top = 777.0
offset_right = 494.0
offset_bottom = 846.0
theme_override_font_sizes/font_size = 50
text = "Playstyle:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MmrLabel3" type="Label" parent="AIDetailPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 678.0
offset_right = 490.0
offset_bottom = 747.0
theme_override_font_sizes/font_size = 50
text = "Highest MMR Peak:"
vertical_alignment = 1

[node name="HighestMmrLabel" type="Label" parent="AIDetailPanel"]
layout_mode = 0
offset_left = 505.0
offset_top = 678.0
offset_right = 546.0
offset_bottom = 747.0
theme_override_font_sizes/font_size = 45
text = "??"
vertical_alignment = 1

[node name="Exit" type="Button" parent="AIDetailPanel"]
layout_mode = 0
offset_left = 149.0
offset_top = 999.0
offset_right = 573.0
offset_bottom = 1197.0
theme_override_font_sizes/font_size = 60
text = "Close"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="AIDetailPanel/Exit" to="." method="_on_exit_pressed"]
